A few more spelling fixes

--- a/localisation/KR_Dominion_of_India_l_english.yml
+++ b/localisation/KR_Dominion_of_India_l_english.yml
@@ -1,4 +1,5 @@
 ﻿l_english:
+
 ### Parties ###
 DEH_totalist_party:0 "Maximists"
 DEH_radical_socialist_party:0 "Socialists"
@@ -121,7 +122,7 @@ DEH_afghansphere_desc:0 "While we utterly destroyed the Afghan army back in 1936
 DEH_prepare2:0 "Continuing Preparations for the Final Struggle"
 DEH_prepare2_desc:0 "Now that our immediate sphere is secure, we must prepare for war soon, on our terms or theirs..."
 DEH_invadeBHC:0 "Invade the Syndicalists!"
-DEH_invadeBHC_desc:0 "The Syndicalsts to the East have too long been a threat. We must strike preemptively, with the element of surprise!"
+DEH_invadeBHC_desc:0 "The Syndicalists to the East have too long been a threat. We must strike preemptively, with the element of surprise!"
 DEH_revoltBHC:0 "Incite Rebellion in the East!"
 DEH_revoltBHC_desc:0 "Our intelligence services have kept in contact with loyalist rebels hiding in the foothills of the Himalayas. We should reach out them and have them stage a revolt in Assam, to free up our troops in the west."
 DEH_BHC_revolters:0 "An uprising erupts in Assam!"
@@ -293,7 +294,7 @@ delhi.108.d:0 "Siam has refused our ultimatum, and attacked!"
 delhi.108.a:0 "Curses!"
 
 delhi.200.t:0 "The Long Night of The Festival of Lights"
-delhi.200.d:0 "In the late hours of the grand Hindu festival of Diwali - the Festival of Lights - riots broke out in Dehradun. Hundreds upon hundreds of celebrating Indians utilized the gathering to launch spontaneous demonstrations against our governance of the Ganges-Yamuna Basin. Nepali shops were burned and the stationed garrisons came under siege. In the chaos of the flames, the governor of the city panicked and ordered the nervous police troops to open fire on a gathering around the Ghanta Gar, leaving around 50 civilians dead, riddled with bullets. As a result, the underground wing of the Indian National Congress has called strikes throughout the lowlands, reaching revolutionary heights in the East. From Delhi, Hyderabad and Calcutta feelings are running high as notables engaged in demagoguery call for Indian intervention in a lawful Indian land. It appears that his majesty, Tribhuvan Shah might better watch out."
+delhi.200.d:0 "In the late hours of the grand Hindu festival of Diwali - the Festival of Lights - riots broke out in Dehradun. Hundreds upon hundreds of celebrating Indians utilised the gathering to launch spontaneous demonstrations against our governance of the Ganges-Yamuna Basin. Nepali shops were burned and the stationed garrisons came under siege. In the chaos of the flames, the governor of the city panicked and ordered the nervous police troops to open fire on a gathering around the Ghanta Gar, leaving around 50 civilians dead, riddled with bullets. As a result, the underground wing of the Indian National Congress has called strikes throughout the lowlands, reaching revolutionary heights in the East. From Delhi, Hyderabad and Calcutta feelings are running high as notables engaged in demagoguery call for Indian intervention in a lawful Indian land. It appears that his majesty, Tribhuvan Shah might better watch out."
 delhi.200.a:0 "This will be a warning heard throughout India!"
 delhi.201.t:0 "The Barricades Go Up in Dehradun"
 delhi.201.d:0 "Riots against the Nepalese occupiers are breaking out throughout of the Ganges-Yamuna Basin, with insurgents taking up arms in Dehradun and Gorakhpur. Caused by the recent massacre committed by the Royal Nepalese Army on Indian protests celebrating the Hindu festival Diwali, these upheavals are proof that king Tribhuvan’s claim to the mantle of protector of his Indian subjects is shallow and hollow. However, the protestors are poorly armed and inexperienced, making their stand against the well trained and battle hardened Nepali gurkhas as frightening perspective. Conservatives and liberals stand united in this issue - no more Indians murdered by foreign troops! No longer can the Nepalese oppression and occupation of the Ganges-Yamuna be tolerated! Parliament is demanding that the government move to the aid of our endangered countrymen, no matter the cost."
@@ -305,7 +306,7 @@ delhi.202.d:0 "In a catastrophic turn of events, the Delhi government has announ
 delhi.202.a:0 "In face of such odds the army can do nothing, withdraw!"
 delhi.202.b:0 "We beat them once and we shall do so again!"
 delhi.203.t:0 "Dehradun and Gorakhpur Secede from Nepal"
-delhi.203.d:0 "With the withdrawal of our armed forces from the Ganges-Yamuna Basin, Indian insurgents and rabble rousers have had a free hand organizing themselves, watchfully protected by the bayonets of the Indian army. Consequently, the most prominent agitators have organized a referendum aimed at restoring our southern provinces to Indian suzerainty. After the catastrophe of the Diwali Massacre and subsequent military intervention there seems to be no doubt as to the outcome of such a referendum..."
+delhi.203.d:0 "With the withdrawal of our armed forces from the Ganges-Yamuna Basin, Indian insurgents and rabble rousers have had a free hand organising themselves, watchfully protected by the bayonets of the Indian army. Consequently, the most prominent agitators have organised a referendum aimed at restoring our southern provinces to Indian suzerainty. After the catastrophe of the Diwali Massacre and subsequent military intervention there seems to be no doubt as to the outcome of such a referendum..."
 delhi.203.a:0 "Popular will backed by foreign weaponry is a hard nut to crack..."
 delhi.204.t:0 "The Secession of the Western Ganges-Yamuna Basin"
 delhi.204.d:0 "Our unification of the Indian subcontinent has come one step closer to reality. Today, the provisional government councils in the districts of Dehradun and Muzaffarpur have unanimously voted to apply for annexation into our union. Nationalist banners adorn the streets from the Kashmir Valley to the snowy tops of the Vindhya Range and the people amass at great rallies celebrating this great victory over dastardly foreign influence. However, given the invasion of troops loyal to the Calcutta government the people of the Yamuna-Ganges Basin have become divided - a setback certainly to be overcome in the time to come."
@@ -314,12 +315,12 @@ delhi.205.t:0 "Tribhuvan's Tryst With Destiny"
 delhi.205.d:0 "In the West, Dominion forces are preparing to come to the aid of the rioting protesters in Dehradun, who have risen in response to a massacre orchestrated by the occupying police garrison. Nepalese army formations are deemed completely impotent in the face of such a modern foe and our intelligence detail among the underground local wing of the INC states that plans of open revolt are hatching in the East as well. A partition of the Nepalese occupied territories thus seems all but imminent. It seems that it will come easily with a dose of proletarian intimidation."
 delhi.205.a:0 "The Indian Red Army shall sweep into the Ganges-Yamuna Basin!"
 delhi.206.t:0 "The Red Army on the Move"
-delhi.206.d:0 "Just as we thought things couldn't get worse, our garrisons in Gangtok and Muzaffarpur report a great amount of troop movement on the border to the East. Undoubtedly a sign that the bolshevik rabble in Calcutta aims at taken back the terrories lost during the Indian Civil War. Sadly, it seems that we are all but powerless in the face of the prospect of a two-front war."
+delhi.206.d:0 "Just as we thought things couldn't get worse, our garrisons in Gangtok and Muzaffarpur report a great amount of troop movement on the border to the East. Undoubtedly a sign that the Bolshevik rabble in Calcutta aims at taken back the territories lost during the Indian Civil War. Sadly, it seems that we are all but powerless in the face of the prospect of a two-front war."
 delhi.206.a:0 "Surrender the eastern occupied lowlands"
 delhi.206.b:0 "We shall cleanse the East of Socialist demagogues!"
 delhi.207.t:0 "Nepal Caves!"
 delhi.207.d:0 "With our army gathering on their border, the [From.GetAdjective] government has caved to pressure and surrendered the eastern lowlands of Sikkim and Muzzaffarpur to our control."
 delhi.207.a:0 "And not a single shot fired!"
 delhi.208.t:0 "Nepali Atrocities in the Ganges-Yamuna Basin"
-delhi.208.d:0 "Horrible news has reached us from the Ganges-Yamuna Basin! Late last night, the celebration of the Hindu festival of Diwali turned violent as hundreds upon hundreds of Indians utilized the gathering to launch spontaneous protests against Nepal’s occupation of rightful Indian soil. A local police commander lost his nerve and ordered his troops to fire upon one of these demonstrations, leaving 50 civilians dead. Tempers are running high throughout the lowlands, reaching revolutionary heights in Dehradun. Our government should be prepared for any eventuality. After all, do we not claim to represent ALL Indians?"
+delhi.208.d:0 "Horrible news has reached us from the Ganges-Yamuna Basin! Late last night, the celebration of the Hindu festival of Diwali turned violent as hundreds upon hundreds of Indians utilised the gathering to launch spontaneous protests against Nepal’s occupation of rightful Indian soil. A local police commander lost his nerve and ordered his troops to fire upon one of these demonstrations, leaving 50 civilians dead. Tempers are running high throughout the lowlands, reaching revolutionary heights in Dehradun. Our government should be prepared for any eventuality. After all, do we not claim to represent ALL Indians?"
 delhi.208.a:0 "Outrageous!"
