--- a/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
+++ b/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
@@ -23,8 +23,8 @@ PLC_mendog_iii:0 "Mendog III"
 PLC_lithuanian_lead:0 "Lithuanian Leadership"
 PLC_polish_language:0 "The Polish Language"
 PLC_minority_rights:0 "Minority Guarantees"
-PLC_decentralization:0 "Decentralization"
-PLC_centralizing_power:0 "Centralizing Power"
+PLC_decentralization:0 "Decentralisation"
+PLC_centralizing_power:0 "Centralising Power"
 PLC_building_the_capital:0 "Building the New Capital"
 PLC_vilnius_warsaw_railway:0 "The Vilnius-Warsaw Railway"
 PLC_an_absolute_monarch:0 "The Absolute Monarch"
@@ -39,13 +39,13 @@ PLC_the_revolution:0 "Fires of the Revolution"
 PLC_new_secret_police:0 "The Secret Police"
 PLC_fourth_international:0 "The Fourth International"
 PLC_join_with_france:0 "The Internationale"
-PLC_mobilize_the_people:0 "Mobilize the People"
+PLC_mobilize_the_people:0 "Mobilise the People"
 PLC_diplomatic_offices:0 "Diplomatic Offices"
 PLC_the_monarch:0 "The Commonwealth Alone"
 PLC_stick_with_germany:0 "Stick with Germany"
 PLC_german_tech_sharing:0 "The Kaiser Wilhelm Society"
 PLC_economic_treaties:0 "Economic Co-operation"
-PLC_german_advisors:0 "German Advisors"
+PLC_german_advisors:0 "German Advisers"
 PLC_our_natural_borders:0 "Our Natural Borders"
 PLC_the_greater_commonwealth:0 "The Greater Commonwealth"
 PLC_ruthenian_invitation:0 "Ruthenian Referendum"
@@ -55,14 +55,14 @@ PLC_strike_east:0 "Strike East"
 PLC_strike_south:0 "Strike South"
 PLC_strike_north:0 "Strike North"
 PLC_mobile_army:0 "A Mobile Army"
-PLC_impenetrable_defense:0 "An Impenetrable Defense"
+PLC_impenetrable_defense:0 "An Impenetrable Defence"
 PLC_integrating_two_armies:0 "Integrating Two Armies"
 PLC_polish_leadership:0 "Polish Leadership"
 PLC_lithuanian_tactics:0 "Lithuanian Tactics"
 PLC_special_forces:0 "Strike Teams"
 PLC_mobile_infantry:0 "Mobile Infantry"
 PLC_supply_chains:0 "Extended Supply Chains"
-PLC_armored_spearhead:0 "Armored Spearhead"
+PLC_armored_spearhead:0 "Armoured Spearhead"
 PLC_tank_innovations:0 "Commonwealth Designs"
 PLC_killing_blow:0 "A Killing Blow"
 PLC_never_surrender:0 "Never Surrender"
@@ -71,7 +71,7 @@ PLC_artillery_focus:0 "Bombardment Focus"
 PLC_moving_fortresses:0 "Mobile Fortresses"
 PLC_russian_forts:0 "Russian Border Forts"
 PLC_holding_our_gains:0 "Holding Our Gains"
-PLC_mobilization:0 "Mobilization"
+PLC_mobilization:0 "Mobilisation"
 PLC_wartime_rations:0 "Economic Rationing"
 PLC_new_tactics:0 "New Army Tactics"
 PLC_army_drills:0 "Army Drills"
@@ -122,7 +122,7 @@ PLC_radar:0 "New RADAR Stations"
 PLC_paratroopers:0 "The Commonwealth Airborne"
 PLC_fighters:0 "New Fighter Designs"
 PLC_better_fighters:0 "The Modern Fighter"
-PLC_rocket_experiments:0 "Jet Experimentations"
+PLC_rocket_experiments:0 "Jet Experimentation"
 PLC_air_tactics:0 "Air Tactics"
 PLC_more_air_tactics:0 "Combined Air Tactics"
 PLC_heavy_fighters:0 "Heavy fighter Designs"
