--- a/localisation/KR_Afghanistan_l_english.yml
+++ b/localisation/KR_Afghanistan_l_english.yml
@@ -7,8 +7,8 @@ afg.0.a:0 "The time is ripe! Let us repeat our victories!"
 afg.0.b:0 "What does India have but cows?"
 
 afg.1.t:0 "The Third Treaty of Rawalpindi"
-afg.1.d:0 "Catastrophe! Our campaign against the Delhi Government has been crowned with spectacular failure and our armies forced through the Pass of Khyber, fleeing in panick. The vice-roy, Ganga Singh, has offered peace - demanding a restoration of the pre-1926 borders. Unfortunately we are unable to decline, lest our very nation be destroyed..."
-afg.1.d.puppet:0 "Catastrophe! Our campaign against the Delhi Government has been crowned with spectacular failure and our armies forced through the Pass of Khyber, fleeing in panick. The vice-roy, Ganga Singh, has offered peace - demanding a restoration of the pre-1926 borders and the permanent submission of our government to theirs. Unfortunately we are unable to decline, lest our very nation be destroyed..."
+afg.1.d:0 "Catastrophe! Our campaign against the Delhi Government has been crowned with spectacular failure and our armies forced through the Pass of Khyber, fleeing in panic. The vice-roy, Ganga Singh, has offered peace - demanding a restoration of the pre-1926 borders. Unfortunately we are unable to decline, lest our very nation be destroyed..."
+afg.1.d.puppet:0 "Catastrophe! Our campaign against the Delhi Government has been crowned with spectacular failure and our armies forced through the Pass of Khyber, fleeing in panic. The vice-roy, Ganga Singh, has offered peace - demanding a restoration of the pre-1926 borders and the permanent submission of our government to theirs. Unfortunately we are unable to decline, lest our very nation be destroyed..."
 afg.1.a:0 "We yield because we have no other choice..."
 
 afg.2.t:0 "The Third Treaty of Rawalpindi"
