--- a/localisation/KR_Italy_l_english.yml
+++ b/localisation/KR_Italy_l_english.yml
@@ -273,7 +273,7 @@ ITA_Fighter_Focus_desc:0 "Without air superiority, we can never make use of airc
 ITA_Bomber_Focus:0 "Bomber Focus"
 ITA_Bomber_Focus_desc:0 "Bombers are seeing massive improvements all around the world. We must keep up and make use of them ourselves."
 ITA_Aviation_Effort_2:0 "Aviation Effort"
-ITA_Aviation_Effort_2_desc:0 "High quality aircraft is useful, but without proper doctrine, they can´t reach their full potential. This area needs more attention."
+ITA_Aviation_Effort_2_desc:0 "High quality aircraft is useful, but without proper doctrine, they can't reach their full potential. This area needs more attention."
 ITA_Heavy_Fighter_Focus:0 "Heavy Fighter Focus"
 ITA_Heavy_Fighter_Focus_desc:0 "Our bombers need protection by fighters that can match their range. We need to develop new, heavier fighter models."
 ITA_CAS_Effort:0 "CAS Focus"
@@ -315,7 +315,7 @@ ITA_radical_socialist_party_long:0 "Partito Socialista Italiano"
 
 ### Events ###
 ita.1.t:0 "Father Charles Coughlin"
-ita.1.d:0 "Three years from today, Father Charles Coughlin started doing weekly a radio broadcast in America and more than 50 million people turn on their radios and listen. He is a raving Anti-Semite, claiming that the Syndicalist Revolution in France was 'foremented by the Jew' and that the Berlin Stock Market Crash is an 'International Conspiracy of Jewish Baners' and somehow people still tune in. His hate-speech will not betolerated by the Church, and the Pope is expected to make a decision whether to ask the United States government to shut down his broadcast so his hateful message cannot reach the public."
+ita.1.d:0 "Three years from today, Father Charles Coughlin started doing weekly a radio broadcast in America and more than 50 million people turn on their radios and listen. He is a raving Anti-Semite, claiming that the Syndicalist Revolution in France was 'foremented by the Jew' and that the Berlin Stock Market Crash is an 'International Conspiracy of Jewish Baners' and somehow people still tune in. His hate-speech will not be tolerated by the Church, and the Pope is expected to make a decision whether to ask the United States government to shut down his broadcast so his hateful message cannot reach the public."
 ita.1.a:0 "Ask the President of the United States to shut down this 'Radio Priest'"
 ita.1.b:0 "It would be best if we did not interfere"
 ita.2.t:0 "Gabriele d'Annunzio Dies"
