More map changes to India
- added Vizagapatnam (separated from Orissa)
- added Lahore (separated from Punjab)
- added Shimla (separated from Delhi)
- renamed Arunchal Pradesh to Tawang
- Absorbed Nagaland into Assam, and broke off its eastern portion as Manipur instead (on the Burmese border)
- moved around some individual provinces to different states

--- a/localisation/KR_Princely_Federation_l_english.yml
+++ b/localisation/KR_Princely_Federation_l_english.yml
@@ -213,8 +213,8 @@ PRF_attack_bhartiya_desc:0 "The Syndicalsts to the East have too long been a thr
 
 PRF_india_united:0 "India United!"
 PRF_india_united_desc:0 "Jai Hind! The subcontinent is once again ours! Now what?"
-PRF_bhutan_claims:0 "Arunachal Pradesh"
-PRF_bhutan_claims_desc:0 "The mountainous frontier territory once known as Tawang is rightfully ours, and was seized by the traitorous Bhutanese during the chaos of the Weltkrieg. It is time to reassert our domain over the area, now that a true national government has been reestablished."
+PRF_bhutan_claims:0 "Claim Tawang"
+PRF_bhutan_claims_desc:0 "The mountainous frontier territory known as Tawang is rightfully ours, and was seized by the traitorous Bhutanese during the chaos of the Weltkrieg. It is time to reassert our domain over the area, now that a true national government has been reestablished."
 PRF_nepal_claims:0 "Our Claims Against Nepal"
 PRF_nepal_claims_desc:0 "Nepal expanded into the Indian lowlands in the chaos following the Weltkrieg. It is time to reassert our domain over those territories."
 PRF_incorporate_madras:0 "The Deccan States"
@@ -491,7 +491,7 @@ prf.185.d.return:0 "Left with little choice, the [From.GetAdjective] government 
 prf.185.d.govt:0 "Left with little choice, the [From.GetAdjective] government has turned over our territory and submitted to [Root.GetAdjective] de facto control."
 prf.185.a:0 "Was there any other doubt?"
 prf.186.t:0 "Bhutan Refuses!"
-prf.186.d:0 "Amazingly, the [From.GetAdjective] has refused our demand, saying that if we wish to retake Arunchal Pradesh then we shall have to do so by force!"
+prf.186.d:0 "Amazingly, the [From.GetAdjective] has refused our demand, saying that if we wish to retake Tawang then we shall have to do so by force!"
 prf.186.a:0 "Then war it is!"
 prf.186.b:0 "Perhaps another time..."
 prf.187.t:0 "Dealing With Nepal"
