--- a/localisation/KR_State_Names_l_english.yml
+++ b/localisation/KR_State_Names_l_english.yml
@@ -423,7 +423,7 @@ STATE_420:0 "Gilan"
 STATE_421:0 "Kurdistan"
 STATE_422:0 "Ceylon"
 STATE_423:0 "Madurai"
-STATE_424:0 "Madras"
+STATE_424:0 "Andhra"
 STATE_425:0 "Mysore"
 STATE_426:0 "Orissa"
 STATE_427:0 "Hyderabad"
@@ -433,7 +433,7 @@ STATE_430:0 "East Bengal"
 STATE_431:0 "West Bengal"
 STATE_432:0 "Assam"
 STATE_433:0 "Rajahsthan"
-STATE_434:0 "Nagaland"
+STATE_434:0 "Manipur"
 STATE_435:0 "Bihar"
 STATE_436:0 "Jabalpur"
 STATE_437:0 "Indore"
@@ -857,7 +857,7 @@ STATE_854:0 "David"
 STATE_855:0 "Acre"
 STATE_856:0 "Mekong Delta"
 STATE_857:0 "Dong Bac"
-STATE_858:0 "Arunachal Pradesh"
+STATE_858:0 "Tawang"
 STATE_859:0 "Takao"
 STATE_860:0 "Timbuktu"
 STATE_861:0 "Eyl"
@@ -888,3 +888,6 @@ STATE_885:0 "Songjiang"
 STATE_886:0 "Jilin"
 STATE_887:0 "Muzaffarpur"
 STATE_888:0 "Sikkim"
+STATE_889:0 "Vizagapatnam"
+STATE_890:0 "Shimla"
+STATE_891:0 "Lahore"
