--- a/localisation/KR_Victory_Points_l_english.yml
+++ b/localisation/KR_Victory_Points_l_english.yml
@@ -423,6 +423,7 @@ VICTORY_POINTS_8049:0 "Yan'an"
 VICTORY_POINTS_8085:0 "Kuwait City"
 VICTORY_POINTS_8087:0 "Hyderabad"
 VICTORY_POINTS_8098:0 "Quetta"
+VICTORY_POINTS_8106:0 "Lahore"
 VICTORY_POINTS_8111:0 "El Aaiún"
 VICTORY_POINTS_8113:0 "Caracas"
 VICTORY_POINTS_8117:0 "Shiraz"
@@ -508,7 +509,6 @@ VICTORY_POINTS_10007:0 "Rhodes"
 VICTORY_POINTS_10024:0 "Murcia"
 VICTORY_POINTS_10032:0 "Kanazawa"
 VICTORY_POINTS_10062:0 "Hong Kong"
-VICTORY_POINTS_10066:0 "Lahore"
 VICTORY_POINTS_10068:0 "Tianjin"
 VICTORY_POINTS_10074:0 "Palermo"
 VICTORY_POINTS_10088:0 "Cuttack"
@@ -549,6 +549,7 @@ VICTORY_POINTS_10717:0 "Kansas City"
 VICTORY_POINTS_10737:0 "Kabul"
 VICTORY_POINTS_10747:0 "Bogotá"
 VICTORY_POINTS_10760:0 "Muscat"
+VICTORY_POINTS_10772:0 "Ludhiana"
 VICTORY_POINTS_10803:0 "Abidjan"
 VICTORY_POINTS_10836:0 "Ouagadougou"
 VICTORY_POINTS_10837:0 "Tehran"
