Added  elections event for Haiti

--- a/localisation/KR_Dominican_Haitan_War_l_english.yml
+++ b/localisation/KR_Dominican_Haitan_War_l_english.yml
@@ -2,7 +2,7 @@
 
 ### Events ###
 dhw.1.t:0 "Dominican Introduction"
-dhw.1.d:0 "In 1844 the Eastern part of the island of Hispaniola, since 1822 a part of the young country Haiti, declared its independence as Dominican Republic. Instability and foreign threats marked the early years of the new state. Restorative tendencies found the support of the oligarchy who, in the face of a border dispute with Haiti, put the country back under Spanish colonial rule in 1861 until revolts forced independence again in 1865. Economically and politically the Dominican Republic became more and more dependant on the U.S.A. who first openly intervened in 1905 to collect debts. Between 1916 and 1924 they occupied the country in order to get control over the financial and military institutions, beginning a democratisation of the state. The military coup of General Rafael Lйonidas Trujillo y Molina in 1930 abolished the 1924 constitution again. He went a forceful way to modernise and centralise the country, not looking at the social havoc this caused."
+dhw.1.d:0 "In 1844 the Eastern part of the island of Hispaniola, since 1822 a part of the young country Haiti, declared its independence as Dominican Republic. Instability and foreign threats marked the early years of the new state. Restorative tendencies found the support of the oligarchy who, in the face of a border dispute with Haiti, put the country back under Spanish colonial rule in 1861 until revolts forced independence again in 1865. Economically and politically the Dominican Republic became more and more dependant on the U.S.A. who first openly intervened in 1905 to collect debts. Between 1916 and 1924 they occupied the country in order to get control over the financial and military institutions, beginning a democratisation of the state. The military coup of General Rafael Léonidas Trujillo y Molina in 1930 abolished the 1924 constitution again. He went a forceful way to modernise and centralise the country, not looking at the social havoc this caused."
 dhw.1.a:0 "Interesting"
 
 dhw.2.t:0 "Haitian Introduction"
@@ -97,3 +97,25 @@ dhw.20.t:0 "The Republic is defeated"
 dhw.20.d:0 "Our long time enemies, the Dominican Republic, have been defeated. We can either liberate them with a government on our model, or take steps to formally annex them into our nation."
 dhw.20.a:0 "Establish a puppet regime in the Dominican Republic"
 dhw.20.b:0 "We've fought for that territory, we're keeping it"
+
+dhw.21.t:0 "Haitian 1937 Referendum"
+dhw.21.d:0 "In late 1935, Sténio Vincent, president of Haiti since 1930, had announced for today a referendum on whether he would be allowed to continue holding the post until 1944. If not, presidential elections will be called next year."
+dhw.21.a:0 "Yes - Allow Sténio Vicent to hold the presidency for another term"
+dhw.21.b:0 "No - Call for elections in 1937"
+
+dhw.22.t:0 "Haitian Elections, 1937"
+dhw.22.d:0 "According to the results of the 1936 referendum, presidential elections were called. Sténio Vincent himself is running, under his National Party ticket, but is opposed by Élie Lescot, of the conservative Patriotic Coalition. The underdog Social-Democrats have also fielded Démosthenes Pétrus Calixte, a former Garde commander, but are not expected to pose a serious threat..."
+dhw.22.a:0 "National Party - Sténio Vincent"
+dhw.22.b:0 "Patriotic Coalition - Élie Lescot"
+dhw.22.c:0 "Social Democratic Party - Démosthenes Pétrus Calixte"
+
+
+###Haiti Localisation ###
+HAI_social_democrat_party:0 "SDP"
+HAI_market_liberal_party:0 "IP"
+HAI_authoritarian_democrat_party:0 "NP"
+HAI_paternal_autocrat_party:0 "PC"
+HAI_social_democrat_party_long:0 "Social Democratic Party"
+HAI_market_liberal_party_long:0 "Industrial Party"
+HAI_authoritarian_democrat_party_long:0 "National Party"
+HAI_paternal_autocrat_party_long:0 "Patriotic Coalition"
