added Delhi's death events

--- a/localisation/KR_Dominion_of_India_l_english.yml
+++ b/localisation/KR_Dominion_of_India_l_english.yml
@@ -293,6 +293,31 @@ delhi.108.t:0 "Siam Attacks!"
 delhi.108.d:0 "Siam has refused our ultimatum, and attacked!"
 delhi.108.a:0 "Curses!"
 
+delhi.150.t:0 "Death of Sir Sikander Hayat Khan"
+delhi.150.d:0 "One of the greatest statesmen of India, Sir Sikander Hayat Khan, passed away last night at his home in Multan, the Punjab. A great leader and politician, Hayat Khan had led the Unionist Party for several years and campaigned vigorously for the conservative ideals of his party. He is succeeded as chairman by the popular Jat leader, Sir Chhotu Ram."
+delhi.150.a:0 "Fare thee well"
+delhi.151.t:0 "Death of V. S. Srinivasa Sastri"
+delhi.151.d:0 "The astute and brilliant leader of the popular Indian Liberal Party, V. S. Srinivasa Sastri passed away late last night after a prolonged period of illness surrounded by his close kin and friends. He is succeeded as leader of the Liberal Party by the young economist Minocher Rustom Masani."
+delhi.151.a:0 "The Liberal Party mourns its greatest leader"
+delhi.152.t:0 "The Passing of Ganga Singh"
+delhi.152.d:0 "Maybe the greatest Indian to have lived since the birth of the Raj, Maharaja Ganga Singh passed away at his royal palace in Bikaner State late last night. Having led a distinguished career within the British and Indian armies, Singh was the man who forged a stable legal government in the mad current of socialist rebellion and princely treachery. Now, with India stronger than ever, his place will be incredibly hard to fill."
+delhi.152.a:0 "The people of India enters a state of mourning"
+delhi.152.b:0 "B.R. Ambedkar, the living saint, succeeds him as Viceroy"
+delhi.152.c:0 "J.R.D. Tata, the brilliant magnate, succeeds him as Viceroy"
+delhi.152.e:0 "A.C. Chatterjee, the stern diplomat, succeeds him as Viceroy"
+delhi.153.t:0 "Death of Sayajirao Gaekwad III of Baroda"
+delhi.153.d:0 "An imposing and resolute ruler, Sayajirao Gaekwad passed away this morning in his palace in Baroda. Mourned by many, Sayajirao was an independent-minded ruler with little regard for the British or their Raj. He is succeeded by his grandson and famous spend-thrift Pratap Singh Gaekwad who is known to share his grandfather's nationalist sentiments."
+delhi.153.a:0 "Fare thee well"
+delhi.154.t:0 "The Passing of Muhammad Ali Jinnah"
+delhi.154.d:0 "Perhaps the greatest politician of modern India and a tireless believer in Indian unity and constitutional politics, Muhammad Ali Jinnah passed away quietly in his sleep last night. A towering personality, Jinnah had shaped the Delhi government since its inception and safeguarded Indian democracy in the face of Syndicalism and princely feudalism. He is succeeded as head of the Home Rule Party by V.K. Krishna Menon."
+delhi.154.a:0 "The greatest Indian gentleman is no more"
+delhi.155.t:0 "Death of Khengarji III of Kutch"
+delhi.155.d:0 "A progressive and venerable prince, Khengarji III of Cutch passed away this evening at his residence in Bhuj, Gujarat. Having ruled his state wisely for 67 years, the late prince will be mourned by many."
+delhi.155.a:0 "Fare thee well"
+delhi.156.t:0 "Passing of Sir Mian Fazl-i-Husain"
+delhi.156.d:0 "The architecht of the gentry/peasant (kisan) political alliance that laid the groundwork for the powerful Unionist Party, Sir Mian Fazl-i-Husain has passed away after a prolonged period of illness. Having been absent from the day to day running of the party for a prolonged period of time owing to his illness, Fazl-i-Husain will never the less be sorely missed within conservative circles."
+delhi.156.a:0 "The Unionist Party soldiers on!"
+
 delhi.200.t:0 "The Long Night of The Festival of Lights"
 delhi.200.d:0 "In the late hours of the grand Hindu festival of Diwali - the Festival of Lights - riots broke out in Dehradun. Hundreds upon hundreds of celebrating Indians utilised the gathering to launch spontaneous demonstrations against our governance of the Ganges-Yamuna Basin. Nepali shops were burned and the stationed garrisons came under siege. In the chaos of the flames, the governor of the city panicked and ordered the nervous police troops to open fire on a gathering around the Ghanta Gar, leaving around 50 civilians dead, riddled with bullets. As a result, the underground wing of the Indian National Congress has called strikes throughout the lowlands, reaching revolutionary heights in the East. From Delhi, Hyderabad and Calcutta feelings are running high as notables engaged in demagoguery call for Indian intervention in a lawful Indian land. It appears that his majesty, Tribhuvan Shah might better watch out."
 delhi.200.a:0 "This will be a warning heard throughout India!"
