* simplified ISAC setup by CAN
* Delhi now cannot join ISAC until it's created
* added AI weighting to Delhi focus tree

--- a/localisation/KR_Canada_l_english.yml
+++ b/localisation/KR_Canada_l_english.yml
@@ -890,12 +890,9 @@ canada.661.t:0 "[From.GetName] Sues for Peace"
 canada.661.d:0 "Exhausted and unwilling to continue the fight to protect their island colonies, the [From.GetAdjective] government has sent an envoy asking for white peace. In exchange, we will gain their island holdings, no further questions asked."
 canada.661.a:0 "Yes, let's end this now"
 canada.661.b:0 "This war isn't over until we're marching on [From.Capital.GetName]!"
-canada.700.t:0 "Dominion of India and the Imperial Scientific and Academic Council"
-canada.700.d:0 "The government of Canada has formed the Imperial Scientific and Academic Council, to co-ordinate the research efforts of the member states of the British Empire. Canada has generously offered to fund the main operations of the council, so the Delhi government only needs to fund the efforts of its own scientists and academics to participate. Should our government join the ISAC?"
-canada.700.a:0 "Join the ISAC"
-canada.701.t:0 "Australasia and the Imperial Scientific and Academic Council"
-canada.701.d:0 "The government of Canada has formed the Imperial Scientific and Academic Council, to co-ordinate the research efforts of the member states of the British Empire. Canada has generously offered to fund the main operations of the council, so the Australasian government only needs to fund the efforts of its own scientists and academics to participate. Should our government join the ISAC?"
-canada.701.a:0 "Join the ISAC"
-canada.702.t:0 "The Caribbean Federation and the Imperial Scientific and Academic Council"
-canada.702.d:0 "The government of Canada has formed the Imperial Scientific and Academic Council, to co-ordinate the research efforts of the member states of the British Empire. Canada has generously offered to fund the main operations of the council, so the Caribbean government only needs to fund the efforts of its own scientists and academics to participate. Should our government join the ISAC?"
-canada.702.a:0 "Join the ISAC"
+canada.700.t:0 "The Imperial Scientific and Academic Council"
+canada.700.d:0 "The [CAN.GetAdjective] government has formed the Imperial Scientific and Academic Council, to better co-ordinate the research efforts of member states of the British Empire. Canada has generously offered to fund the main operations of the council, so our government would only need to fund the efforts of our own scientists and academics in order to participate and share in the technological benefits."
+canada.700.a:0 "An interesting idea"
+canada.701.t:0 "Leaving the ISAC"
+canada.701.d:0 "As [Root.GetNameDef] is no longer a member of the Entente with [CAN.GetNameDef], the ISAC ceases to have any benefit for us."
+canada.701.a:0 "So be it"
