--- a/localisation/KR_Dominion_of_India_l_english.yml
+++ b/localisation/KR_Dominion_of_India_l_english.yml
@@ -22,6 +22,9 @@ DEH_authoritarian_democrat_party_long:0 "Council of Princes"
 DEH_paternal_autocrat_party_long:0 "Princely Sympathisers"
 DEH_national_populist_party_long:0 "Imperial Sympathisers"
 
+### Tooltips ###
+DEH_ISAC_has_formed:0 "§Y[CAN.GetName]§! has formed the ISAC\n"
+
 ### Ideas ###
 DEH_princely_power:0 "Power of the Princes"
 DEH_princely_power_desc:0 "The Dominion of India was only able to remain in government thanks to the loyalty of the northern princes. They share power with the government, but it is a difficult and archaic process that involves a great deal of waste."
