--- a/localisation/KR_Tannu_Tuva_l_english.yml
+++ b/localisation/KR_Tannu_Tuva_l_english.yml
@@ -2,8 +2,8 @@
 
 ### Events ###
 tuva.1.t:0 "Foundation of the Khural"
-tuva.1.d:0 "The Tuvan nation is gaining further structure, and today we have officialy founded the national parlaiment, the Khural, to deal with local and national issues. How shall this structure be treated?"
-tuva.1.a:0 "Officialy recognize the local tribes and leaders through the Khural."
+tuva.1.d:0 "The Tuvan nation is gaining further structure, and today we have officially founded the national parliament, the Khural, to deal with local and national issues. How shall this structure be treated?"
+tuva.1.a:0 "Officially recognise the local tribes and leaders through the Khural."
 tuva.1.b:0 "Set up a democratic system through the Khural."
 tuva.1.c:0 "Set up an autocracy of Ondar and Khuular and limit the Khural."
 
@@ -11,7 +11,7 @@ tuva.2.t:0 "The Tuvan Army"
 tuva.2.d:0 "The Khural's meeting has resulted in the first issue, being that of the situation of the army."
 tuva.2.a:0 "Leave recruiting and maintenance to the tribes."
 tuva.2.b:0 "Build a strong central military."
-tuva.2.c:0 "Create a decentralized, Peoples' Army."
+tuva.2.c:0 "Create a decentralised, Peoples' Army."
 
 tuva.3.t:0 "Tuvan National Railroad"
 tuva.3.d:0 "Members of the Khural met today, with their newest proposition. The bill introduced was to build a railroad from Kyzyl, connecting settlements in the nation along the way to Irkutsk in the north, where it would join with the Trans-Siberian Railroad. This would greatly improve our infrastructure, and provide numerous economic benefits."
@@ -19,12 +19,12 @@ tuva.3.a:0 "Build the Railroad !"
 tuva.3.b:0 "We can't afford this"
 
 tuva.4.t:0 "The Kyzyl Airport"
-tuva.4.d:0 "Members of the Khural met today, enthusiastic with the growth taking place in Tuva. Hoping to further expand the economic boom, representitives from the Kyzyl capital area have proposed a bill to put money into building Kyzyl International Airport. This could prove very prosperous for the Tuvans in the long run."
+tuva.4.d:0 "Members of the Khural met today, enthusiastic with the growth taking place in Tuva. Hoping to further expand the economic boom, representatives from the Kyzyl capital area have proposed a bill to put money into building Kyzyl International Airport. This could prove very prosperous for the Tuvans in the long run."
 tuva.4.a:0 "Build the Airport"
 tuva.4.b:0 "We can't afford this"
 
 tuva.5.t:0 "The Smuggler Problem"
-tuva.5.d:0 "For years, Tuva has been a hub for smugglers on a route that extends from the Trans-siberian railroad in the north to Shanghai in the south, linking East Asia with Europe. Supported by the Mongolian government, Kyzyl became an important stopping point along this route. Recently, a coalition of smugglers banded together to meet with Ondar, ready to discuss the future of smugglers and bandits in Tuva."
+tuva.5.d:0 "For years, Tuva has been a hub for smugglers on a route that extends from the Trans-Siberian railroad in the north to Shanghai in the south, linking East Asia with Europe. Supported by the Mongolian government, Kyzyl became an important stopping point along this route. Recently, a coalition of smugglers banded together to meet with Ondar, ready to discuss the future of smugglers and bandits in Tuva."
 tuva.5.a:0 "Pledge the continued support of the smugglers."
 tuva.5.b:0 "Sternberg is dead, and we'll never support renegades!"
 
@@ -34,13 +34,12 @@ tuva.6.a:0 "Build the Airport."
 tuva.6.b:0 "We don't have the resources now."
 
 tuva.7.t:0 "The Irkutsk-Kyzyl Syndicate"
-tuva.7.d:0 "The rise of smuggler power in Kyzyl has grown considerably. Recently, the same powerful group of smugglers, thugs, and bandits who pushed for the creation of the Kyzyl airport have officially formed an alliance, called the Irkutsk-Kyzyl syndicate, after their two primary places of operation. Rumors are abound that our leader Ondar is playing a heavy hand in the rise and protection of all of this thuggery."
+tuva.7.d:0 "The rise of smuggler power in Kyzyl has grown considerably. Recently, the same powerful group of smugglers, thugs, and bandits who pushed for the creation of the Kyzyl airport have officially formed an alliance, called the Irkutsk-Kyzyl syndicate, after their two primary places of operation. Rumours are abound that our leader Ondar is playing a heavy hand in the rise and protection of all of this thuggery."
 tuva.7.a:0 "Their success is our success."
 
 tuva.8.t:0 "Increased smuggling activity in Siberia"
-tuva.8.d:0 "The rise of smuggler activity from China along the Trans-Siberian Railroad for an unknown reason has greatly changed the crime rate of the nation, leading to criminalization of officials in Siberia, and losing confidence from the local Russians there."
-tuva.8.a:0 "Increase security along Trans-Siberian railroad !"
-
+tuva.8.d:0 "The rise of smuggler activity from China along the Trans-Siberian Railroad for an unknown reason has greatly changed the crime rate of the nation, leading to criminalisation of officials in Siberia, and losing confidence from the local Russians there."
+tuva.8.a:0 "Increase security along Trans-Siberian railroad!"
 
 ### Parties ###
 TAN_totalist_party:0 "Khural"
